# OxideBuild

./: Cargo.toml  LICENSE  README.md  oxidebuild.toml
scripts/: install.sh  post_installl.sh
src/: error.rs  lib.rs  main.rs
src/commands/: build.rs  clean.rs  deploy.rs  mod.rs  test.rs
src/config/: build_profile.rs  config_parser.rs  mod.rs
src/platform/: cross_compile.rs  linux.rs  macos.rs  mod.rs  target.rs  windows.rs
src/utils/: file_ops.rs  logging.rs  mod.rs  process.rs
