[package]
name = "oxidebuild"
version = "0.1.0"
edition = "2022"
authors = ["Monderasdor <monderasdor.gmail.com>"]
description = "A multi-platform advanced build tool for Rust projects"
license = "MIT"
repository = "https://github.com/MONDERASDOR/oxidebuild"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
walkdir = "2.3"
glob = "0.3"
